Salesforce Assignment/Salesforce Assignment 2/Salesforce_Assignment_2/src/objects/Validation_Field__c.object
<CustomObject>
    <fields>
        <fullName>Credit_Card_Number__c</fullName>
        <label>Credit_Card_Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mix_Pct__c</fullName>
        <label>Mix Pct</label>
        <precision>4</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Multiple_of_5__c</fullName>
        <label>Multiple of 5</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Validation_Date__c</fullName>
        <label>Validation Date</label>
        <type>Date</type>
    </fields>
    <label>Validation Field</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Validation Fields Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Validation Fields</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Credit_Card_Number_Validate</fullName>
        <active>true</active>
        <description>Validates that a custom text field called Credit_Card_Number is formatted in 9999-9999-9999-9999 or 9999999999999999 number format when it is not blank.</description>
        <errorConditionFormula>AND(Not( ISBLANK( Credit_Card_Number__c ) ),Not( REGEX( Credit_Card_Number__c ,&quot;(((\\d{4}-){3}\\d{4})|\\d{16})?&quot;) ))</errorConditionFormula>
        <errorDisplayField>Credit_Card_Number__c</errorDisplayField>
        <errorMessage>Credit_Card_Number should be in this format 9999-9999-9999-9999 or 9999999999999999</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Date_Validation</fullName>
        <active>true</active>
        <description>Validates that the value of a custom date field is a weekday (not Saturday or Sunday).</description>
        <errorConditionFormula>CASE(MOD(  Validation_Date__c - DATE(1900, 1, 7), 7),
0, 0,
6, 0,
1) = 0</errorConditionFormula>
        <errorDisplayField>Validation_Date__c</errorDisplayField>
        <errorMessage>date field must be a weekday</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Mix_Pct_Validation</fullName>
        <active>true</active>
        <description>Validates that a custom field called Mix Pct is between 0 and 100%.</description>
        <errorConditionFormula>OR(
    Mix_Pct__c  &lt; 0.0,
    Mix_Pct__c  &gt; 1.0
)</errorConditionFormula>
        <errorDisplayField>Mix_Pct__c</errorDisplayField>
        <errorMessage>Mix Pct value should be between 0 and 100%.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>MultipleOf5_Validation</fullName>
        <active>true</active>
        <description>Validates that a custom field called Multiple of 5 is a multiple of five.</description>
        <errorConditionFormula>MOD(Multiple_of_5__c , 5) &lt;&gt; 0</errorConditionFormula>
        <errorDisplayField>Multiple_of_5__c</errorDisplayField>
        <errorMessage>Number must be a multiple of five.</errorMessage>
    </validationRules>
</CustomObject>